--- a/hd/lang/lex_utf8.txt
+++ b/hd/lang/lex_utf8.txt
@@ -4,19 +4,19 @@ en: reset to
 fr: restaurer
 
     select p_mod
-co: selezziunà i mudulli persunalizati (predefinitu zz)
-en: select personalized modules (default zz)
-fr: selectionner les modules personnalisés (défaut zz)
+co: selezziunà i mudulli persunalizati
+en: select personalized modules
+fr: selectionner les modules personnalisés
 
     last sosa level not navigable
-co: l'ultimu livellu di sosa ùn si pò micca navigà. Impiegate a lista di l'antenati.
-en: last sosa level not navigable. Use ancestors list.
-fr: le dernier niveau des sosa n'est pas navigable. Utilisez la liste des ancêtres.
+co: l'ultimu livellu di Sosa ùn si pò micca navigà. Impiegate a lista di l'antenati.
+en: last Sosa level not navigable. Use ancestors list.
+fr: le dernier niveau des Sosa n’est pas navigable. Utilisez la liste des ancêtres.
 
     with root, spouses and unknowns
 co: cù l'antenatu radica, i cumpagni è i scunnisciuti
 en: with root ancestor, spouses and unknowns
-fr: avec l'ancêtre racine, les conjoints et les inconnus
+fr: avec l’ancêtre racine, les conjoints et les inconnus
 
     hide portraits
 co: piattà i ritratti
@@ -4967,7 +4967,7 @@ co: affissà a numerotazione d'Aboville
 de: Sosa/Kekule-Nummer anzeigen
 en: Display d’Aboville number
 es: editar la numeración de Aboville
-fi: Näytä sosa-numero
+fi: Näytä Sosa-numero
 fr: afficher la numérotation d’Aboville
 it: visualizzare la numerazione d'Aboville
 nl: de d'Aboville nummering tonen
@@ -8840,15 +8840,15 @@ ru: родители неизвестны
 co: Sosa chì manca
 de: Fehlende SOSA
 en: missing Sosa numbers
-es: falta sosa
+es: falta Sosa
 fi: Sosa-numero
 fr: Sosa manquants
-it: sosa mancante
-nl: ontbrekende sosa's
+it: Sosa mancante
+nl: ontbrekende Sosa's
 no: Sosa-nummer
 oc: Sosa que mancan
-pt: sosa em falta
-sv: Saknade sosa
+pt: Sosa em falta
+sv: Saknade Sosa
 
     missing sources
 co: fonte chì mancanu
@@ -9257,7 +9257,7 @@ bg: навигация чрез числа на Соса относно %t
 br: merdeadur gant %t 'vel dave Sosa
 ca: navegació amb %t amb referència de "número Sosa"
 co: navigazione cù %t cum'è referenza Sosa
-cs: prohlížení s %t jako "sosa" referencí
+cs: prohlížení s %t jako "Sosa" referencí
 da: navigering med %t som reference for fortløbende anenummerering (Sosa o.a.)
 de: Navigation mit %t als Proband für die Ahnenkennziffern
 en: browse using %t as Sosa reference
@@ -11572,7 +11572,7 @@ es: idéntico al nº Sosa
 fi: Sama kuin Sosa #
 fr: identique au n° Sosa
 it: identico al n° Sosa
-nl: identiek met sosa nr
+nl: identiek met Sosa nr
 no: Samme som Sosa #
 oc: identic(a) al n° Sosa #
 pt: idêntico ao nº Sosa
