explicit NMDBS, fix translation, remove RLM/sort if nb=1…

--- a/hd/lang/lex_utf8.txt
+++ b/hd/lang/lex_utf8.txt
@@ -8393,7 +8393,7 @@ co: matrimoniu/matrimonii
 cs: manželství
 da: giftermål/giftermål
 de: Heirat/Heiraten
-en: spouse/spouses
+en: marriage/marriages
 eo: edziĝo:a:+n/edziĝoj
 es: casamiento/casamientos
 et: abielu/abielud
