--- a/hd/lang/lex_utf8.txt
+++ b/hd/lang/lex_utf8.txt
@@ -1,3 +1,80 @@
+    select input
+de: wählen
+en: choose file
+fr: sélect. fichier
+
+    portrait
+en: portrait
+fr: portrait
+
+    saved images
+en: saved image/saved images
+fr: image sauvegardée/images sauvegardées
+
+    comment
+en: comment
+fr: comment
+
+    with comment
+en: with a comment
+fr: avec un commentaire
+
+    send image with comment
+en: send selected image with this comment
+fr: envoyer l’image selectionnée avec ce commentaire
+
+    uploaded
+en: uploaded
+fr: envoyé/envoyée
+
+    save
+en: save
+fr: sauvegarder
+
+    saved
+en: saved
+fr: sauvegardé/sauvegardée
+
+    deleted
+en: deleted
+fr: supprimé/supprimée
+
+    restore
+en: restore
+fr: restaurer
+
+    restored
+en: restored
+fr: restauré/restaurée
+
+    save portrait
+en: the existing portait will be saved to
+fr: le portrait existant sera sauvegardé dans
+
+    previous portrait
+en: a previous copy of the portait in this subfolder will be deleted.
+fr: une sauvegarde existante du portrait dans ce sous-répertoire sera supprimée.
+
+    store image
+en: the selected image will be copied to
+fr: l'image sélectionnée sera enregistrée dans
+
+    save image
+en: an image with a similar name will moved to
+fr: si une image du même nom existe déjà, elle sera sauvegardée dans
+
+    previous image
+en: if an image with the same name already exists in this subfolder, it will be deleted.
+fr: si une image du même nom existe déjà dans ce sous-répertoire, elle sera supprimée.
+
+    image comment
+en: add a comment for the image.
+fr: ajouter un commentaire à l’image.
+
+    update image comment
+en: update image comment
+fr: mettre à jour le commentaire de l’image
+
     !dates order
 af: yyyymmdd
 ar: ddmmyyyy
