--- a/hd/lang/lex_utf8.txt
+++ b/hd/lang/lex_utf8.txt
@@ -2,6 +2,10 @@
 en: the number of participants is too large. If necessary, adjust max_rlm_nbr in your parameter file.
 fr: le nombre de personnes concernées est trop grand. Si nécessaire, ajustez max_rlm_nbr dans votre fichier paramètres.
 
+    max_rlm
+en: max number for list of individuals
+fr: nombre maximum pour les listes d'individus
+
     search results
 en: detailed results of search by place for
 fr: résultats détaillés de la recherche par lieu pour
