--- a/hd/lang/lex_utf8.txt
+++ b/hd/lang/lex_utf8.txt
@@ -1,3 +1,67 @@
+    rlm_nbr too large
+en: the number of participants is too large. If necessary, adjust max_rlm_nbr in your parameter file.
+fr: le nombre de personnes concernées est trop grand. Si nécessaire, ajustez max_rlm_nbr dans votre fichier paramètres.
+
+    search results
+en: detailed results of search by place for
+fr: résultats détaillés de la recherche par lieu pour
+
+    matching
+en: matching
+fr: correspondance
+
+    case sensitive title
+en: dont ignore case and accents
+fr: tenir compte des majuscules et accents
+
+    case sensitive
+en: case sensitive
+fr: capitales et accents
+
+    word match title
+en: match full location name
+fr: comparer avec le nom complet d'un lieu
+
+    word match
+en: word match
+fr: mot complet
+
+    any place title
+en: search in the list of sub-places
+fr: rechercher dans la liste des sous-lieux
+
+    any place
+en: sub-places
+fr: sous-lieux
+
+    max nbr title
+en: max number for relation list
+fr: nombre maximum pour les listes de relations
+
+    max nbr
+en: max rel nbr
+fr: max rel nbr
+
+    substring
+en: substring
+fr: partiel
+
+    substring
+en: substring
+fr: partiel
+
+    total/partial display
+en: total/partial display
+fr: affichage total/partiel
+
+    long/short display
+en: long/short display
+fr: affichage long/court
+
+    all the places
+en: all the places
+fr: tous les lieux
+
     reset to
 co: risturà
 en: reset to
