--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,66 @@
+GeneWeb version 7.00
+--------------------
+
+This changelog note tries to reconstruct changes in GeneWeb since version 6.08.
+It may miss some details which might be added later if relevants.
+
+- Development environment: GeneWeb's development environment has been shifted to opam+dune,
+  and relies on a variety of external libraries. Dependencies are managed by opam.
+  See README for installation instructions
+
+- Code revision: GeneWeb code has been profoundly reorganised:
+  - files are now separated into a /bin and /lib folders.
+  - some functions have been isolated as external librairies and/or separate
+    repositories (contrib, unidecode)
+  - some files have been split in two parts, isolating the display functions from
+    the other functions
+  - front-end (GUI, API) functions and back-end (database) functions have been isolated
+    to facilitate development and direct plugin of new front and back-end solutions.
+  - many code factorization, optimisation and bug fixes
+
+- Archival format: the archival (gw) format has been upgraded to gwplus. gwc v7 reads
+  old .gw files, and gwu v7 can write old format files when launched with the parameter -old_gw.
+
+- Events are now a first class citizen in GeneWeb (personal events and family events).
+  Events attributes are name, date, place, source and note. Witnesses can be attached to events.
+  The current implementation results in redundant data in the .gw file as birth, baptism, marriage,
+  death and burial are both reported in the traditional way (part of the peron or family record) 
+  and as personal or family events. (to be fixed in a later version).
+  A specific .gwf variable (has_events) and a template command (%has_events;) allows to test for
+  events beyond birth, baptism, mariage, death and burial (see a.gwf for details).
+
+- History: bug fixes
+
+- GUI: the look ot GeneWeb's interface has been revamped with a modern tool: html 5 and Bootstrap,
+  resulting in a better compatibility between screen formats (PC, tablet, phone).
+  Icons are display as font elements rather than images.
+
+-Templates: templates have been revised in multiple fashion
+  - new templates (H and I trees, family tree, ascendant and descendant tables)
+  - the variety of templates (a, b, c, ...) has been collapsed into a mechanism allowing
+    interactive selection of modules to form a page (left-most icon on the menubar).
+    Modules include identity, unions, parents, grand-parents, relations, notes,
+    sources, chronology and various trees.
+    Each module may take several forms inspired by the old a, b, c, .. templates.
+    A standard mechanism allows to add private modules.
+    A .gwf variable (p_mod) allows memorization of a particular module configuration 
+    for a given base (see a.gwf for details).
+  - whenever possible, clickable items on a page point to the designated person 
+    (first_name surname), its update page (sex of dates), its family update page (marriage date).
+    
+- Advanced search: the advanced search page, and the underlying search mechanisms have
+  been updated for generality and efficiency. This is an ongoing effort.
+
+- Gwsetup: updated to include more options and more tools (connex, gwdiff, gwfixbase)
+
+- gwd: new launch parameters
+  - various API related parameters
+  - trace_templ -> Brackets template files with begin/end html comments (<!-- begin xxx ->)
+    including the full path name of the file
+
+- gwf:
+    new variables in the gwf file are described in the a.gwf default configuration file
+
 GeneWeb version 6.08
 --------------------
 
@@ -2751,7 +2814,7 @@ GeneWeb Version 1.11
       <a href="%sp=john;n=smith">John Smith</a>
   - [Jan 11, 99] Display declined forms (for some languages). E.g.:
       * in German: "x ist ein Sohn von einem Cousin von y"
-	  ("einem" instead of the inkorrect "ein").
+    ("einem" instead of the inkorrect "ein").
       * in Esperanto: "aldoni personon"
           ("personon" instead of the incorrect "persono")
 
